--- a/assets/custom.css
+++ b/assets/custom.css
@@ -9,3 +9,47 @@
 #input-box input[type="button"]{
     margin-top: 10px;
 }
+#todo div{
+    width: 100%;
+    padding: 10px 10px;
+    background-color: #ccc;
+}
+#todo div:not(#todoHead){
+    margin-top: 10px;
+}
+#todo input[type="button"]{
+    float:right;
+}
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+#modalInnerDiv{
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+}
+#close{
+    color: #aaaaaa;
+    float: right;
+    font-weight: bold;
+}
+#modalInnerDiv input{
+    width: 100%;
+    display: block;
+    padding: 10px 10px;
+}
+#modalInnerDiv input[type="button"]{
+    margin-top: 10px;
+}
