--- a/assets/custom.css
+++ b/assets/custom.css
@@ -53,3 +53,11 @@
 #modalInnerDiv input[type="button"]{
     margin-top: 10px;
 }
+#inprogress div{
+    width: 100%;
+    padding: 10px 10px;
+    background-color: #ccc;
+}
+#inprogress div:not(#inprogressHead){
+    margin-top: 10px;
+}
