--- a/assets/custom.css
+++ b/assets/custom.css
@@ -61,3 +61,11 @@
 #inprogress div:not(#inprogressHead){
     margin-top: 10px;
 }
+#done div{
+    width: 100%;
+    padding: 10px 10px;
+    background-color: #ccc;
+}
+#done div:not(#doneHead){
+    margin-top: 10px;
+}
