--- a/assets/main.css
+++ b/assets/main.css
@@ -2,12 +2,12 @@
     box-sizing: border-box;
 }
 html{
-    font-family: "Lucida Sans",sans-serif;
+    font-family: "Times New Roman",Times,serif;
 }
 nav{
     display: block;
     overflow: hidden;
-    background-color: black;
+    background-color: #34495E;
 }
 nav a{
     float: left;
@@ -19,23 +19,60 @@ nav a{
 .col-3{
     width: 25%;
     float: left;
-    padding: 10px 10px;
+    padding: 5px 5px;
 }
 button{
     display: block;
     width: 100%;
     text-align: center;
-    background-color: #ddd;
+    background-color: #ccc;
+    font-family: "Times New Roman",Times,serif;
     border: none;
     padding: 10px 10px;
 }
 .row{
-    padding: 10px 10px;
+    padding-top: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 .row::after{
     content: "";
     clear: both;
     display: table;
+}
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+#modalInnerDiv{
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+}
+#close{
+    color: #969696;
+    float: right;
+    font-weight: bold;
+}
+#modalInnerDiv input{
+    width: 100%;
+    display: block;
+    padding: 10px 10px;
+}
+#modalInnerDiv input[type="button"]{
+    margin-top: 10px;
+    background-color: #ccc;
 }
 @media only screen and (max-width: 768px){
     [class*="col-"]{
