--- a/assets/custom.css
+++ b/assets/custom.css
@@ -51,7 +51,7 @@
     color: black;
 }
 @media only screen and (min-width: 768px){
-    #todo,#inprogress,#done{
+    #inprogress,#done{
         border-left: 1px solid #969696;
     }
 }
