--- a/assets/main.css
+++ b/assets/main.css
@@ -70,7 +70,6 @@ button:hover{
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
 }
@@ -80,6 +79,7 @@ button:hover{
     padding: 20px;
     border: 1px solid #888;
     width: 50%;
+    height: auto;
 }
 #close{
     color: #969696;
