--- a/assets/main.css
+++ b/assets/main.css
@@ -42,7 +42,6 @@ button{
     display: block;
     text-align: center;
     background-color: #34495E;
-    font-family: "Times New Roman",Times,serif;
     color: #f2f2f2;
     border: none;
     padding: 10px 10px;
@@ -86,7 +85,7 @@ button:hover{
     float: right;
     font-weight: bold;
 }
-#modalInnerDiv input{
+#modalInnerDiv input,label{
     width: 100%;
     display: block;
     padding: 10px 10px;
@@ -94,16 +93,6 @@ button:hover{
 #modalInnerDiv input[type="button"]{
     margin-top: 10px;
     background-color: #ccc;
-}
-#toast{
-    visibility: hidden;
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-    z-index: 1;
-    margin: auto;
-    bottom: 0;
 }
 @media only screen and (max-width: 768px){
     [class*="col-"]{
